further work on classes and styling

--- a/project4/assets/typography.css
+++ b/project4/assets/typography.css
@@ -26,3 +26,18 @@ h2.sub-heading {
     color: red;
 }
 
+.food p.burger {
+    background-color: blue;
+}
+
+.top-block h2{
+    color: brown;
+}
+
+.top-block p{
+    font-style: italic;
+}
+
+.top-block button{
+    background-color: pink;
+}
