--- a/project4/assets/typography.css
+++ b/project4/assets/typography.css
@@ -1,43 +1,41 @@
-h1 {
-    text-align: center;
-    color: blueviolet;
+
+/* 0 1 1  (has higher specificity because it has type selector also*/
+p.burger{
+    background-color: red;
 }
 
-.text {
-    color: white;
-    background-color: green;
-    font-size: 24px;
-}
-
-.food {
-    background-color: chartreuse;
-}
-
-.burger {
-    font-style: italic;
-    
-}
-
-.food h3 {
-    background-color: yellow;
-}
-
-h2.sub-heading {
-    color: red;
-}
-
-.food p.burger {
-    background-color: blue;
-}
-
-.top-block h2{
-    color: brown;
-}
-
-.top-block p{
-    font-style: italic;
-}
-
-.top-block button{
+/* 0 1 0 */
+.burger{    
     background-color: pink;
+}
+
+/* 1 0 1 */
+h3#heading-3 {
+    background-color: burlywood;
+}
+
+ 
+/* 1 0 0  */
+#heading-3 {
+    background-color: violet;
+}
+
+/* 1 1 1 */
+h3.subheading#heading-3 {
+    background-color: cornflowerblue;
+}
+
+/* 0 1 1 */
+p.pizza{
+    background-color: yellowgreen;
+}
+
+/* 0 2 1 */
+p.pizza.fruit { background-color: blue;
+
+}
+
+/* 1 0 0 */
+#fruit{
+    background-color: brown;
 }
